feat(community): add moderated questions
